# 4ever-gol

./: .gitignore  .pilot-behavior.yaml  .pilot-commands.yaml  .pilot-hints.md  README.md  app.py  index.html  pyproject.toml  requirements.txt  vercel.json
frontend/: main.js  utils.js
