[tool.poetry]
name = "4ever-gol"
version = "0.1.0"
description = "A global, interactive game of life that runs forever"
authors = ["Marco Lamina <mlamina09@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
SQLite4 = "^0.1.1"
uvicorn = "^0.30.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
